# Synergy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Synergy.hpp  cmake_install.cmake  testfile.txt
Synergy.xcodeproj/: project.pbxproj
Synergy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Synergy.xcodeproj/project.xcworkspace/xcshareddata/: Synergy.xccheckout
examples/: GlfwExample.cpp  PostProcessorExample.cpp
examples/PerlinNoiseDemo/: PerlinNoiseDemo.cpp  PerlinNoiseDemo.hpp  PerlinNoiseGenerator.cpp  PerlinNoiseGenerator.hpp
examples/PerlinNoiseDemo/shaders/: ScreenQuad.fs  ScreenQuad.vs
examples/TerrainDemo/: LightingOven.cpp  LightingOven.hpp  MarchingCubesExample.cpp  MarchingCubesExample.hpp  MarchingCubesRenderer.cpp  MarchingCubesRenderer.hpp  MarchingCubesSurfacePolygonizer.cpp  MarchingCubesSurfacePolygonizer.hpp  PerlinNoiseDemo.cpp  PerlinNoiseDemo.hpp  PostProcessRenderer.cpp  PostProcessRenderer.hpp  RenderTarget.cpp  RenderTarget.hpp  RockDensityGenerator.cpp  RockDensityGenerator.hpp  Skybox.cpp  Skybox.hpp  TerrainBlock.cpp  TerrainBlock.hpp  TerrainBlockGenerator.cpp  TerrainBlockGenerator.hpp  TerrainDemo.cpp  TerrainDemo.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  VboMemoryPool.cpp  VboMemoryPool.hpp
examples/TerrainDemo/shaders/: BlockEdges.fs  (+22 more)
examples/Utils/: CameraController.cpp  GlfwOpenGlWindow.hpp  PerlinNoiseGenerator.cpp
examples/VolumeFillingTriangles/: VolumeFillingTriangles.cpp  VolumeFillingTriangles.hpp
source/Synergy/: CMakeLists.txt~  Makefile  Synergy.hpp  cmake_install.cmake
(+20 files in other folders)
